@@ -116,6 +116,7 @@ TESTS = \
 	t/split-index.sh \
 	t/index-long-nodeline.sh \
 	t/menu-sequence.sh \
+	t/relative-reference.sh \
 	t/quoted-label-as-target.sh \
 	t/quoted-target.sh \
 	t/quoted-label-and-target.sh \
