@@ -1,5 +1,15 @@
 2014-07-15  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/nodes.c (info_find_file): Call xstrdup on a string so we can
+	free it later.
+
+	* info/t/relative-reference.sh: New test.
+	* info/t/Init-inter.inc (run_ginfo): Inform about program failure 
+	on pipe.
+	* info/t/Timeout-test.inc: Check for failure message.
+
+2014-07-15  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/t/Init-inter.inc (run_ginfo): New function to wrap call of
 	program for interactive tests.
 	* info/t/Timeout-test.inc: New file.
